# ryht

./: .gitignore  .mcp.json  .project-tree  ADVANCED_RUST_CODE_ANALYSIS_REPORT.md  ANALYSIS_INDEX.md  ANALYSIS_KEY_FINDINGS.txt  ARCHITECTURE.md  CODE_STRUCTURE_ANALYSIS.md  CORTEX_AUDIT_EXECUTIVE_SUMMARY.md  CORTEX_PARSER_IMPLEMENTATION_ROADMAP.md  Cargo.toml  ENHANCEMENT_REPORT.md  LICENSE  MATERIALIZATION_ANALYSIS.md  MATERIALIZATION_INDEX.md  MATERIALIZATION_SUMMARY.md  MATERIALIZATION_VISUAL_GUIDE.md  Makefile.toml  PROJECT_STATUS.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  build-and-copy.sh  control.sh  control.ts  create_test_user.py  history.txt  remove-workspace-type.sh  test_db_cycles.sh
axon/: .gitignore  CLI_ARCHITECTURE.md  CORTEX_INTEGRATION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  UNIFIED_MESSAGING_SUMMARY.md  index.html  justfile  package-lock.json  package.json  web_server.design.md
axon/benches/: binary_discovery_bench.rs  serialization_bench.rs
axon/cc_agents/: README.md
axon/docs/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  ORCHESTRATOR_WORKER_PATTERN.md  UNIFIED_MESSAGING_ARCHITECTURE.md
axon/examples/: README.md  batch_processor.rs  error_handling.rs  interactive.rs  mcp_integration_patterns.rs  modern_client.rs  multi_agent_runtime.rs  openai_compatible_server.rs.bak  orchestrator_worker_demo.rs  permission_modes.rs  process_registry_demo.rs  rest_api_server.rs.bak  session_management.rs  simple_query.rs  streaming_metrics.rs  streaming_output.rs
axon/src/: App.tsx  cache.rs  cortex_launcher.rs  hooks.rs  internal_query.rs  lib.rs  main.rs  messages.rs  perf_utils.rs  prelude.rs  result.rs
axon/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
axon/templates/: module_doc.md
axon/tests/: README.md  control_protocol_e2e.rs  cortex_integration_test.rs  e2e_control.rs  e2e_hooks.rs  e2e_set_permission_mode.rs  e2e_workflows.rs  integration_agent_lifecycle.rs  integration_consensus.rs  integration_cortex.rs  integration_websocket_multiagent.rs  integration_workflow.rs  integration_workflow_execution.rs  mcp_integration.rs  message_pattern_learning_tests.rs  options_tests.rs  permissions_tests.rs  runtime_integration_test.rs  session_filter_tests.rs  session_writer_tests.rs  settings_tests.rs  test_sub_agents.rs  token_optimization_test.rs  unified_messaging_integration_tests.rs  unit_agents.rs  unit_consensus.rs  unit_cortex_bridge.rs  unit_intelligence.rs  unit_orchestration.rs  unit_orchestrator_worker.rs  unit_parallel_executor.rs  unit_rest_api.rs  unit_runtime.rs  version_consolidation_test.rs
cortex/: .env.example  .gitignore  BIDIRECTIONAL_SYNC.md  CODE_REVIEW_REPORT.md  CONFIGURATION_SYSTEM.md  CORTEX_VS_TRADITIONAL_COMPARISON.md  Cargo.toml  DELIVERABLES.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MATERIALIZATION_ARCHITECTURE_ANALYSIS.md  Makefile  OPTIMIZATION_REPORT.md  PROJECT_STRUCTURE.md  QDRANT_FILES_CREATED.md  QDRANT_QUICKSTART.md  QUICK_START.md  README.md  RUN_TESTS.sh  SURREALDB_MANAGER_IMPLEMENTATION.md  TESTING.md  TEST_REPORT.md  TEST_SUMMARY.md  TOKEN_EFFICIENCY_ANALYSIS.md  docker-compose.yml  run_all_tests.sh  run_benchmarks.sh
cortex/benches/: e2e_workflows.rs  mcp_tools_performance.rs  performance_benchmarks.rs  qdrant_benchmark.rs
cortex/config/: prometheus-alerts.yml  prometheus.yml  qdrant.toml  qdrant.yaml
cortex/cortex/: CACHE_IMPLEMENTATION.md  Cargo.toml  README.md
cortex/cortex-cli/: Cargo.toml  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  USAGE.md  USER_GUIDE.md
cortex/cortex-code-analysis/: ADVANCED_METRICS_MIGRATION.md  ANALYSIS_MODULE_INTEGRATION.md  AST_ANALYSIS_FEATURES.md  COMMENT_REMOVAL.md  CONCURRENT_INTEGRATION.md  CONCURRENT_PROCESSING.md  CONCURRENT_SUMMARY.md  Cargo.toml  FUNCTION_DETECTION.md  IMPROVEMENTS.md  INTEGRATION_SUMMARY.md  METRICS_QUICK_REFERENCE.md  MIGRATION_SUMMARY.md  PARSER_TRAIT_INTEGRATION.md  QUICK_START.md  README.md  UTILS_INTEGRATION.md  libtest.rlib
cortex/cortex-core/: CONFIG.md  CONFIGURATION_IMPLEMENTATION_REPORT.md  CONFIG_IMPLEMENTATION_SUMMARY.md  CONFIG_QUICKSTART.md  CONFIG_QUICK_REFERENCE.md  Cargo.toml  IMPLEMENTATION_REPORT.md  README_CONFIG.md
cortex/cortex-ingestion/: Cargo.toml  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md
cortex/cortex-mcp/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  INTEGRATION_SUMMARY.md  README.md  README_COMPREHENSIVE.md  TOOLS_COMPLETE_LIST.md
cortex/cortex-memory/: Cargo.toml  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  STRESS_TEST_RESULTS.md
cortex/cortex-parser/: Cargo.toml  README.md
cortex/cortex-semantic/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_REPORT.md  QDRANT_MIGRATION_README.md  QUICKSTART.md  QUICK_START.md  README.md  SUMMARY.md
cortex/cortex-storage/: ARCHITECTURE.md  CONNECTION_POOL_ENHANCEMENTS.md  CONNECTION_POOL_QUICK_REFERENCE.md  CONNECTION_POOL_README.md  CRITICAL_TEST_RESULTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PRODUCTION_TESTS.md  QUICK_START_DB.md  README_SURREALDB.md  SURREALDB_MANAGER.md  SYNCHRONIZATION.md  TEST_REPORT_SURREALDB_MANAGER.md
cortex/cortex-vfs/: Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md
cortex/docs/: QDRANT_MIGRATION_GUIDE.md  QDRANT_SETUP.md  QDRANT_SUMMARY.md
cortex/migrations/: 001_code_unit_schema.surql  004_document_schema.surql
cortex/scripts/: setup-qdrant.sh
cortex/src/: error_recovery.rs  lib.rs  main.rs  shutdown.rs
cortex/tests/: INTEGRATION_TEST_REPORT.md  MCP_TESTS_README.md  QDRANT_TESTS_README.md  QUICK_REFERENCE.md  README_TOKEN_EFFICIENCY.md  README_VFS_ULTIMATE_TEST.md  REFACTORING_QUICK_START.md  REFACTORING_SCENARIOS_README.md  REFACTORING_TEST_SUMMARY.md  TEST_SUITE_README.md  ULTIMATE_INTEGRATION_TEST.md  code_generation_test.rs  comprehensive_workflow_verification.rs  cross_crate_integration.rs  e2e_cortex_complete.rs  e2e_cortex_workflow.rs  (+49 more)
(+1572 files in other folders)
