[workspace]
resolver = "2"

members = [
    "axon/src-tauri",
    "cortex",
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ry.ht team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ryht"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP/Web (for dashboard)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database (for cognitive memory)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Configuration
config = "0.14"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
