[workspace]
resolver = "2"

members = [
    "axon/src-tauri",
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ry.ht team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ryht"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.31"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP/Web (for dashboard)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database (for cognitive memory)
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
surrealdb = { version = "2.3.10", features = ["kv-mem", "kv-rocksdb"] }

# Configuration
config = "0.15.18"

# CLI
clap = { version = "4.5.50", features = ["derive"] }

# Utilities
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
parking_lot = "0.12.5"
once_cell = "1.21.3"
tempfile = "3.23.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
