[package]
name = "axon"
version = "0.4.0"
edition = "2024"
authors = ["ZhangHanDong", "LuxQuant"]
license = "MIT"
description = "Multi-Agent System Framework with Claude Code SDK integration"
repository = "https://github.com/ry-ht/ryht"
readme = "README.md"
keywords = ["multi-agent", "agents", "orchestration", "claude", "ai"]
categories = ["api-bindings", "asynchronous", "development-tools", "concurrency"]
exclude = ["examples/", "tests/", "doc/", "README_*.md", "*.sh", "*.py"]

[features]
default = []
# Enable async variants of binary discovery functions
async-discovery = []

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
chrono = { workspace = true }

# Local dependencies (within workspace)
mcp-sdk = { path = "../crates/mcp-sdk" }

# External dependencies
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
pin-project-lite = "0.2"
log = "0.4"
which = "8.0.0"
dirs = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
rand = "0.9"
crossbeam-channel = "0.5"
regex = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "binary_discovery_bench"
harness = false

[[bench]]
name = "session_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false

[[bench]]
name = "version_bench"
harness = false
