[package]
name = "axon"
version = "0.4.0"
edition = "2024"
authors = ["LuxQuant"]
license = "MIT"
description = "Multi-Agent System Framework with Claude Code SDK integration"
repository = "https://github.com/ry-ht/ryht"
readme = "README.md"
keywords = ["multi-agent", "agents", "orchestration", "claude", "ai"]
categories = ["api-bindings", "asynchronous", "development-tools", "concurrency"]
exclude = ["examples/", "tests/", "doc/", "README_*.md", "*.sh", "*.py"]

[[bin]]
name = "axon"
path = "src/main.rs"

[features]
default = []
# Enable async variants of binary discovery functions
async-discovery = []

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
chrono = { workspace = true }

# Local dependencies (within workspace)
mcp-sdk = { path = "../crates/mcp-sdk" }

# External dependencies
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
pin-project-lite = "0.2"
log = "0.4"
which = "8.0.0"
dirs = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
rand = "0.9"
crossbeam-channel = "0.5"
regex = { workspace = true }
base64 = "0.22"

# Cortex Bridge dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2.1"

# Token counting for context optimization
tiktoken-rs = "0.7.0"

# CLI dependencies
clap = { workspace = true }
console = "0.16.1"
indicatif = "0.18.1"
dialoguer = "0.12.0"
comfy-table = "7.2.1"

# Configuration
toml = { workspace = true }
serde_yaml = "0.9"

# CLI utilities
lazy_static = "1.5.0"

# HTTP/API Server dependencies
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "fs"] }

# Logging
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }
libc = "0.2.177"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "binary_discovery_bench"
harness = false

[[bench]]
name = "session_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false

[[bench]]
name = "version_bench"
harness = false
