[package]
name = "meridian"
version = "0.2.0"
edition = "2021"
authors = ["Meridian Contributors"]
description = "Cognitive memory system for LLM codebase interaction"
license = "MIT"
repository = "https://github.com/omnitron-dev/meridian"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"

# Storage
# SurrealDB with RocksDB backend for unified storage architecture
surrealdb = { version = "2.3.10", features = ["kv-rocksdb", "protocol-ws"] }
base64 = "0.22.1"

# Code parsing
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"

# Search and indexing
tantivy = "0.25.0"
hnsw_rs = "0.3.2"

# ML/Embeddings
fastembed = "5.2.0"

# NLP utilities
tokenizers = "0.22.1"
hf-hub = "0.4.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Async traits
async-trait = "0.1.89"
async-recursion = "1.1.1"

# Logging
env_logger = "0.11.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# MCP SDK - TODO: Add when published or fix the package name
# Note: The official MCP Rust SDK is in development
# For now, we'll implement a minimal MCP server directly
# mcp-rust-sdk = { git = "https://github.com/modelcontextprotocol/rust-sdk.git" }

# Configuration
toml = "0.9.8"

# Git integration
git2 = "0.20.2"

# CLI
clap = { version = "4.5.49", features = ["derive"] }

# HTTP server (axum)
axum = { version = "0.8.6", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# HTTP client (reqwest)
reqwest = { version = "0.12.24", features = ["json"] }

# Data structures
dashmap = "6.1.0"
parking_lot = "0.12.5"
lru = "0.16.2"
bincode = "2.0.1"
petgraph = "0.8.3"  # In-memory graph for fast traversals
num_cpus = "1.17.0"

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# UUID
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Hashing
blake3 = "1.8.2"

# Compression
lz4 = "1.28.1"
zstd = "0.13.3"

# Regex
regex = "1.12.2"

# Markdown parsing
pulldown-cmark = "0.13.0"

# System information
sysinfo = "0.37.2"

# Process management
dirs = "6.0.0"
nix = { version = "0.30.1", features = ["signal", "process"] }

# File watching
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }

# Random sampling for verification
rand = "0.9.2"

[dev-dependencies]
tempfile = "3.23.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
criterion = "0.7.0"
tokio-test = "0.4.4"

# Benchmarks commented out until files are created
# [[bench]]
# name = "indexing"
# harness = false

# [[bench]]
# name = "hnsw_bench"
# harness = false

# [[bench]]
# name = "episodic_memory_bench"
# harness = false

# [[bench]]
# name = "hnsw_similarity_bench"
# harness = false

[[bin]]
name = "meridian"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
