[package]
name = "cortex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
# Core
cortex-core = { path = "../cortex-core" }
cortex-storage = { path = "../cortex-storage" }
cortex-vfs = { path = "../cortex-vfs" }
cortex-ingestion = { path = "../cortex-ingestion" }
cortex-memory = { path = "../cortex-memory" }
cortex-mcp = { path = "../cortex-mcp" }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# CLI UI enhancements
indicatif = "0.18.0"
console = "0.16.1"
dialoguer = "0.12.0"
comfy-table = "7.2.1"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dirs = "6.0.0"
rand = "0.9.2"

[dev-dependencies]
tempfile = { workspace = true }
