[package]
name = "cortex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
# Core
cortex-core = { path = "../cortex-core" }
cortex-storage = { path = "../cortex-storage" }
cortex-vfs = { path = "../cortex-vfs" }
cortex-ingestion = { path = "../cortex-ingestion" }
cortex-memory = { path = "../cortex-memory" }
cortex-parser = { path = "../cortex-parser" }
cortex-semantic = { path = "../cortex-semantic" }

# MCP Server Framework
mcp-server = { path = "../../crates/mcp-server", features = ["http"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP and networking
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
schemars = "1.0.4"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# CLI UI enhancements
indicatif = "0.18.0"
console = "0.16.1"
dialoguer = "0.12.0"
comfy-table = "7.2.1"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dirs = "6.0.0"
rand = "0.9.2"
regex = { workspace = true }
num_cpus = "1.16"
ignore = "0.4"

# Tree-sitter parsers
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"

[dev-dependencies]
tempfile = { workspace = true }

[features]
http = []
default = ["http"]
