[package]
name = "cortex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
# Core
cortex-core = { path = "../cortex-core" }
cortex-storage = { path = "../cortex-storage" }
cortex-vfs = { path = "../cortex-vfs" }
cortex-ingestion = { path = "../cortex-ingestion" }
cortex-memory = { path = "../cortex-memory" }
cortex-parser = { path = "../cortex-parser" }
cortex-semantic = { path = "../cortex-semantic" }

# MCP SDK Framework
mcp-sdk = { path = "../../crates/mcp-sdk", features = ["http"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP and networking
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["limit", "cors", "trace"] }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
schemars = "1.0.4"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# CLI UI enhancements
indicatif = "0.18.0"
console = "0.16.1"
dialoguer = "0.12.0"
comfy-table = "7.2.1"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dirs = "6.0.0"
rand = "0.9.2"
regex = { workspace = true }
num_cpus = "1.16"
ignore = "0.4"
sys-info = "0.9.1"
md5 = "0.8.0"
similar = "2.7.0"
once_cell = "1.21.3"
dashmap = "6.1"
walkdir = "2.5"

# Authentication & Security
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["rust_crypto"] }
bcrypt = "0.17.1"
base64 = "0.22.1"
sha2 = "0.10"

# Tree-sitter parsers
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"

# Qdrant client (for migration commands)
qdrant-client = { version = "1.15.0", features = ["serde"] }

# Process management
reqwest = { version = "0.12.24", features = ["json"] }

# Archive extraction
flate2 = "1.1.5"
tar = "0.4.44"

# Shell command parsing
shell-words = "1.1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
portpicker = "0.1.1"

[features]
http = []
default = ["http"]
