[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Utilities
once_cell = { workspace = true }
dirs = "6.0.0"
dashmap = { workspace = true }

# Configuration
toml = { workspace = true }
directories = "6.0.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "config_usage"
path = "examples/config_usage.rs"
