[package]
name = "cortex-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
cortex-core = { path = "../cortex-core" }
cortex-storage = { path = "../cortex-storage" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Database (re-exported from cortex-storage)
surrealdb = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
criterion = { version = "0.7.0", features = ["async_tokio"] }

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "memory_performance"
harness = false
